Actualizado inicializador de datos para leer y ejecutar el script de base de datos de forma interna